       Add get/set_i2c_mode (100kHz/400kHz) functions to Temperature Bricklet API
       Add default text functions to LCD 20x4 Bricklet API
       Don't dispatch callbacks after disconnect
       Fix race condition in callback handling that could result in closing the wrong socket
       Don't ignore socket errors when sending request packets
       Send a request packet at least every 10sec to improve WIFI disconnect detection
2.0.7: Add Ethernet Extension support to Master Brick API
       Only send disconnect probe if there was no packet send or received for 5s
       Avoid race condition during socket closing
       Add IMU orientation and Barometer averaging API
       Fix locking for disconnect probe thread detecting a socket error
2.0.8: Add support for PTC Bricklet and Industrial Dual 0-20mA Bricklet
2.0.9: Avoid ConcurrentModificationException in listener handling by using CopyOnWriteArrayList
2.0.10: Avoid race condition between disconnect probe thread and disconnect function
2.0.11: Add edge counters to Industrial Digital In 4, IO-4 and IO-16 Bricklet
        Make averaging length configurable for Analog In Bricklet
2.0.12: Fix signature of edge count functions in IO-16 Bricklet API
2.0.13: Add support for Distance US, Dual Button, Hall Effect, LED Strip, Line, Moisture, Motion Detector, Multi Touch, Piezo Speaker, Remote Switch, Rotary Encoder, Segment Display 4x7, Sound Intensity and Tilt Bricklet
        Throw IllegalArgumentException on invalid Base58 value as UID
2.0.14: Add Get/SetClockFrequency function to LED Strip Bricklet API
        Fix mixup of Set/GetDateTimeCallbackPeriod and Set/GetMotionCallbackPeriod in GPS Bricklet API
        Support addressing types of Intertechno and ELRO Home Easy devices in Remote Switch Bricklet API
2.1.0: Add authentication support to IPConnection and Master Brick API
       Add TinkerforgeListener and DeviceListener as base interfaces for all listeners