@@ -77,3 +77,4 @@
         Support addressing types of Intertechno and ELRO Home Easy devices in Remote Switch Bricklet API
 2.1.0: Add authentication support to IPConnection and Master Brick API
        Add TinkerforgeListener and DeviceListener as base interfaces for all listeners
+       Escape special HTML characters in JavaDoc
